archive/jenkins/jenkins-ingress.yaml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: jenkins-ui
#  namespace: jenkins
#  annotations:
#    cert-manager.io/cluster-issuer: ingress
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
#spec:
#  ingressClassName: nginx
#  rules:
#    - host: jenkins.cluster
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: jenkins
#                port:
#                  number: 8080
#  tls:
#    - hosts:
#        - jenkins.cluster
#      secretName: jenkins-tls
#---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-public-ui
  namespace: jenkins
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://oauth.serhii.link/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth.serhii.link/oauth2/start?rd=https://$host$request_uri"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: jenkins.serhii.link
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-webhook
  namespace: jenkins
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
#    nginx.ingress.kubernetes.io/whitelist-source-range: "140.82.112.0/20,192.30.252.0/22"
spec:
  ingressClassName: nginx
  rules:
    - host: jenkins.serhii.link
      http:
        paths:
          - path: /github-webhook/
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
